Name:                mathblog
Version:             0.3
Synopsis:            A program for creating and managing a static
                     weblog with LaTeX math and function graphs
Description:         This package provides a program for creating and
                     managing a statically-generated, VCS-friendly,
                     mathematically-inclined weblog.  If you're
                     interested in managing a blog with few moving
                     parts and support for embedded LaTeX math,
                     embedded function plotting, and the UNIX editor
                     of your choice, then this is the blogging
                     platform for you!  For detailed information and a
                     full feature list, please see the README.
Author:              Jonathan Daugherty <drcygnus@gmail.com>
Maintainer:          Jonathan Daugherty <drcygnus@gmail.com>
Build-Type:          Simple
Cabal-version:       >= 1.6
License:             BSD3
License-file:        LICENSE
Category:            Web

Data-Files:
  README.md
  skel/html/stylesheets/stylesheet.css
  skel/templates/postTemplate.html
  skel/templates/pageTemplate.html
  skel/templates/rssTemplate.xml
  skel/eq-templates/eq-basic.txt
  skel/posts/first-post.txt
  skel/blog.cfg

Source-Repository head
  type:     git
  location: git://github.com/jtdaugherty/mathblog.git

Executable mb
  Build-depends:
    base >= 3 && < 5,
    directory >= 1.0 && < 1.1.0.2,
    filepath >= 1.1,
    pandoc >= 1.7 && < 1.9,
    pandoc-types >= 1.7 && < 1.9,
    unix >= 2.3 && < 2.5,
    process >= 1.0,
    time >= 1.1,
    old-locale >= 1.0,
    SHA >= 1.4 && < 1.5,
    bytestring >= 0.9 && < 1.0,
    HStringTemplate >= 0.6 && < 0.7,
    ConfigFile >= 1.1 && < 1.2

  Other-modules:
    Paths_mathblog
    MB.Config
    MB.Templates
    MB.Files
    MB.Types
    MB.Util
    MB.Processing
    MB.Startup
    MB.Gladtex
    MB.Gnuplot
    MB.Mathjax
    MB.Tikz

  GHC-Options: -Wall

  Hs-Source-Dirs:  src
  Main-is:         Main.hs

Executable mb-tests
  Build-depends:
    base >= 3 && < 5,
    directory >= 1.0 && < 1.2,
    filepath >= 1.1,
    pandoc >= 1.8 && < 1.9,
    pandoc-types >= 1.8 && < 1.9,
    unix >= 2.3 && < 2.5,
    process >= 1.0 && < 1.1,
    time >= 1.1,
    old-locale >= 1.0 && < 1.1,
    SHA >= 1.4 && < 1.5,
    bytestring >= 0.9 && < 1.0,
    HStringTemplate >= 0.6 && < 0.7,
    ConfigFile >= 1.1 && < 1.2,
    HUnit >= 1.2.2 && < 1.2.3,
    test-framework >= 0.3.3 && < 0.4,
    test-framework-hunit >= 0.2.6 && < 0.3

  GHC-Options: -Wall
  Cpp-Options: -DTESTING

  Hs-Source-Dirs:  tests/src,
                   src

  Main-is:         Main.hs
  Other-Modules:
    InitTests
    MB.StartupTests