Name:                mathblog
Version:             0.5
Synopsis:            A program for creating and managing a static
                     weblog with LaTeX math and function graphs
Description:         This package provides a program for creating and
                     managing a statically-generated, VCS-friendly,
                     mathematically-inclined weblog.  If you're
                     interested in managing a blog with few moving
                     parts and support for embedded LaTeX math,
                     embedded function plotting, and the UNIX editor
                     of your choice, then this is the blogging
                     platform for you!  For detailed information and a
                     full feature list, please see the README.
Author:              Jonathan Daugherty <cygnus@foobox.com>
Maintainer:          Jonathan Daugherty <cygnus@foobox.com>
Build-Type:          Simple
Cabal-version:       >= 1.6
License:             BSD3
License-file:        LICENSE
Category:            Web

Data-Files:
  README.md
  skel/assets/stylesheets/stylesheet.css
  skel/templates/postTemplate.html
  skel/templates/pageTemplate.html
  skel/templates/rssTemplate.xml
  skel/templates/listTemplate.html
  skel/posts/first-post.txt
  skel/blog.cfg
  gnuplot-templates/eq-basic.txt

Source-Repository head
  type:     git
  location: git://github.com/jtdaugherty/mathblog.git

Executable mb
  Build-depends:
    base >= 3 && < 5,
    directory >= 1.0,
    filepath >= 1.1,
    pandoc >= 1.8 && < 1.10,
    pandoc-types >= 1.8,
    unix >= 2.3,
    process >= 1.0,
    time >= 1.1,
    old-locale >= 1.0,
    SHA >= 1.4,
    bytestring >= 0.9,
    HStringTemplate >= 0.6,
    ConfigFile >= 1.1,
    containers >= 0.3

  Other-modules:
    Paths_mathblog

    MB.Initialize
    MB.Config
    MB.Templates
    MB.Files
    MB.Types
    MB.Util
    MB.Startup
    MB.TeXMacros
    MB.Changes

    MB.Gen.Post
    MB.Gen.PostList
    MB.Gen.RSS
    MB.Gen.Index

    MB.Processing
    MB.Processors.Base
    MB.Processors.Gnuplot
    MB.Processors.Mathjax
    MB.Processors.Tikz

  GHC-Options: -Wall

  Hs-Source-Dirs:  src
  Main-is:         Main.hs

Executable mb-tests
  Build-depends:
    base >= 3 && < 5,
    directory >= 1.0,
    filepath >= 1.1,
    pandoc >= 1.8 && < 1.10,
    pandoc-types >= 1.8,
    unix >= 2.3,
    process >= 1.0,
    time >= 1.1,
    old-locale >= 1.0,
    SHA >= 1.4 && < 1.6,
    bytestring >= 0.9,
    HStringTemplate >= 0.6,
    ConfigFile >= 1.1,
    HUnit >= 1.2.2,
    test-framework >= 0.3.3,
    test-framework-hunit >= 0.2.6

  GHC-Options: -Wall
  Cpp-Options: -DTESTING

  Hs-Source-Dirs:  tests/src,
                   src

  Main-is:         Main.hs
  Other-Modules:
    InitTests
    MB.StartupTests