Name:                mathblog
Version:             0.6
Synopsis:            A program for creating and managing a static
                     weblog with LaTeX math and diagrams
Description:         This package provides a program for creating and
                     managing a statically-generated, VCS-friendly,
                     mathematically-inclined weblog.  If you're
                     interested in managing a blog with few moving
                     parts and support for embedded LaTeX math,
                     embedded function plotting, and the UNIX editor
                     of your choice, then this is the blogging
                     platform for you!  For detailed information and a
                     full feature list, please see the manual PDF in the
                     'doc' directory.
Author:              Jonathan Daugherty <cygnus@foobox.com>
Homepage:            http://jtdaugherty.github.io/mathblog/
Maintainer:          Jonathan Daugherty <cygnus@foobox.com>
Build-Type:          Simple
Cabal-version:       >= 1.8
License:             BSD3
License-file:        LICENSE
Category:            Web

Data-Files:
  README.md
  CHANGELOG.md
  skel/assets/stylesheets/stylesheet.css
  skel/templates/postTemplate.html
  skel/templates/pageTemplate.html
  skel/templates/rssTemplate.xml
  skel/templates/listTemplate.html
  skel/posts/first-post.txt
  skel/blog.cfg
  doc/mathblog-manual.pdf
  doc/Makefile
  doc/title_page.tex
  doc/mathblog-manual.tex
  doc/toc.tex
  doc/macros.tex
  doc/scripts/init.sh
  doc/scripts/changed-post.sh
  doc/scripts/listen-mode.sh

Source-Repository head
  type:     git
  location: git://github.com/jtdaugherty/mathblog.git

Executable mb
  GHC-Options:     -Wall
  Hs-source-dirs:  src
  Main-is:         Main.hs
  Build-depends:
    base >= 3 && < 5,
    deepseq >= 1.2,
    directory >= 1.0,
    filepath >= 1.1,
    pandoc >= 1.12,
    pandoc-types >= 1.12,
    unix >= 2.3,
    process >= 1.0,
    time >= 1.1,
    old-locale >= 1.0,
    SHA >= 1.4,
    HStringTemplate >= 0.6,
    ConfigFile >= 1.1,
    containers >= 0.3,
    fsnotify >= 0.0.6,
    mtl >= 2.0,
    either >= 3.4,
    http-server >= 1.0.2,
    network,
    temporary >= 1.1.2,
    bytestring,
    url,
    HTTP,
    data-default,
    JuicyPixels >= 3.1

  GHC-Options: -Wall

  Other-modules:
    Paths_mathblog
    MB.Initialize
    MB.Config
    MB.Templates
    MB.Types
    MB.Util
    MB.Startup
    MB.TeXMacros
    MB.Server

    MB.Gen.Post
    MB.Gen.PostList
    MB.Gen.RSS
    MB.Gen.Index

    MB.Processing
    MB.Processors.Base
    MB.Processors.Mathjax
    MB.Processors.Tikz

Executable mb-tests
  Hs-Source-Dirs:  tests/src, src
  Main-is:         Main.hs
  CPP-Options:     -DTESTING
  GHC-Options:     -Wall
  Other-Modules:
    InitTests
    MB.StartupTests

  Build-depends:
    base >= 3 && < 5,
    directory >= 1.0,
    filepath >= 1.1,
    pandoc >= 1.12,
    pandoc-types >= 1.12,
    unix >= 2.3,
    process >= 1.0,
    time >= 1.1,
    old-locale >= 1.0,
    SHA >= 1.4,
    HStringTemplate >= 0.6,
    ConfigFile >= 1.1,
    containers >= 0.3,
    fsnotify >= 0.0.6,
    mtl >= 2.0,
    either >= 3.4,
    http-server >= 1.0.2,
    system-filepath,
    network,
    temporary >= 1.1.2,
    bytestring,
    url,
    HTTP,
    data-default,
    test-framework,
    test-framework-hunit,
    HUnit,
    JuicyPixels >= 3.1
